2004-12-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (xtick2d_callback ytick2d_callback): Fix bug
	reported by Mike Kay: if the grid was active and the key box was
	entirely above or to the left of the graph itself, then an extraneous
	grid line was drawn connecting the key box to the graph.

	* src/set.c (set_palette): Fix bug #1077699 - parser was skipping
	whatever token came after  "gamma <val>".

2004-12-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/fig.trm (FIG_set_color): Fix a C99-ism. Thanks to Shigeharu
	Takeno for spotting this.

2004-12-02  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Keep track of current rgb values in parallel to the
	current linetype, since we can no longer count on regenerating the
	former from the latter.

	* term/x11.trm: Add missing X resource to the table in the docs.

	* configure.in: Remove obsolete messages relating to old png driver.

2004-12-01  Ethan Merritt  <merritt@u.washington.edu>

	Add colorspec to linetype, and hence to all 2D and 3D plot elements.
	These changes all depend on configuration with --enable-pm3d
	Add support and demo example of using explicit RGB colors or gnuplot's
	internal pre-defined color names:
	    set style line 1 lt rgbcolor "violet" lw 2
	    set style line 2 lt rgbcolor "#FFA080" lw 2   # salmon pink

	* src/term_api.h: 
	Add new field "struct t_colorspec pm3d_color" to lp_style_type, so that
	any plot element with an associated line type can use palette-based or
	RGB colors.

	* src/term.c (term_apply_lp_properties):
	Check lp_style_type.use_palette flag, and if set apply the colorspec
	rather than a simple linetype color.

	* src/misc.c (lp_parse parse_colorspec):
	Call parse_colorspec() as part of normal line type parsing. This allows
	"lt {rgbcolor 'name'} | {palette {cb <val> | frac <val> | z}}" anywhere
	that "lt <val>" is currently valid.

	* src/graphics.c (do_plot plot_boxes plot_c_bars do_key_sample):